clusters/production/workloads/ghostfolio/ghostfolio-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghostfolio
  namespace: ghostfolio
spec:
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      containers:
        - name: ghostfolio
