clusters/production/workloads/ghostfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghostfolio
  namespace: ghostfolio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "invest.simplelumine.dev"
      secretName: "ghostfolio-tls"
  rules:
    - host: "invest.simplelumine.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghostfolio
                port:
                  number: 80
